test/fail/pointer1.min
program
    number x := 3
start
    x # 4;
end
